--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "geist": "^1.3.1",
     "next": "14.2.13",
+    "next-view-transitions": "^0.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
