--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "geist": "^1.3.1",
-    "next": "14.2.13",
+    "next": "^14.2.15",
     "next-view-transitions": "^0.3.2",
     "react": "^18",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
