--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.8",
-    "@heroicons/react": "^2.1.5",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "geist": "^1.3.1",
     "next": "^14.2.18",
     "next-view-transitions": "^0.3.2",
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
-    "vaul": "^1.0.0"
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "postcss": "^8",
