--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,11 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "geist": "^1.3.1",
-    "next": "^14.2.18",
+    "next": "15.1.3",
     "next-view-transitions": "^0.3.4",
-    "react": "^18",
+    "react": "19.0.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18",
+    "react-dom": "19.0.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
