--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "geist": "^1.3.1",
     "next": "15.1.3",
     "next-view-transitions": "^0.3.4",
