--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "geist": "^1.3.1",
-    "next": "15.1.3",
+    "next": "^15.1.4",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.0.0",
