--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@vercel/analytics": "^1.4.1",
     "geist": "^1.3.1",
     "next": "^15.1.4",
     "react": "19.0.0",
